--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,13 +13,13 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=540
-dock_hsplit_3=-540
+dock_hsplit_3=-799
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_selected_paths=PackedStringArray("res://art/dialogs.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,16 +27,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/world.tscn")
+open_scenes=PackedStringArray("res://scenes/world.tscn", "res://components/interaction.tscn", "res://props/sign.tscn", "res://player/player.tscn")
 current_scene="res://scenes/world.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://player/player.gd"]
+open_scripts=["res://components/interaction.gd", "res://player/player.gd"]
 selected_script="res://player/player.gd"
 open_help=[]
 script_split_offset=140
@@ -47,3 +47,13 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
